# cloudflare-ddns

./: .codecov.yml  Cargo.toml  Makefile  README.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yaml  publish.yaml  test.yaml
src/: ip.rs  lib.rs  record.rs  result.rs
