[package]
name = "cloudflareddns"
version = "0.1.0"
edition = "2021"
authors = ["Roger Neck"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
cloudflare = "0.10.1"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
