[package]
name = "cloudflareddns"
version = "0.1.0"
edition = "2021"
authors = ["Roger Neck"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
cloudflare = "0.11.0"
crossbeam-channel = "0.5.6"
ctrlc = "3.2.5"
reqwest = "0.11.14"
serde = "1.0.152"
serde_json = "1.0.93"
signal-hook = "0.3.15"
thiserror = "1.0.38"
log = "0.4.0"
env_logger = "0.11.2"
